add install from github again, new options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,10 @@ export(post_result.datacamp)
 export(progressDir.datacamp)
 export(swirl)
 export(welcome.datacamp)
+importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
+importFrom(httr,content)
 importFrom(markdown,markdownToHTML)
 importFrom(rjson,toJSON)
 importFrom(stringr,str_trim)
